# nomiracl

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml  tests.yml
examples/: hallucination_evaluation.py  repro_nomiracl_generation.py  sample_load_no_miracl.py  sample_model_generation.py  sample_model_hf_generation.py  sample_vanilla_prompt.py  sample_vanilla_prompt_exploration.py
nomiracl/: __init__.py  logging.py  util.py
nomiracl/dataset/: __init__.py  data_loader.py  util.py
nomiracl/eval/: __init__.py  metrics.py
nomiracl/generation/: __init__.py  anyscale.py  azure.py  base.py  cohere.py  generator.py  huggingface.py  openai.py  utils.py  vllm.py
nomiracl/prompts/: __init__.py  exemplar.py  template.py  utils.py
nomiracl/prompts/exemplars/: orca_dpo_exemplars.tsv
nomiracl/prompts/templates/: zero_shot_chat_prompt.txt  zero_shot_hagrid_prompt.txt  zero_shot_text_prompt.txt
results/GPT-4/non-relevant/: ar.test.non_relevant.vanilla_prompt.jsonl  bn.test.non_relevant.vanilla_prompt.jsonl  de.test.non_relevant.vanilla_prompt.jsonl  en.test.non_relevant.vanilla_prompt.jsonl  es.test.non_relevant.vanilla_prompt.jsonl  fa.test.non_relevant.vanilla_prompt.jsonl  fi.test.non_relevant.vanilla_prompt.jsonl  fr.test.non_relevant.vanilla_prompt.jsonl  hi.test.non_relevant.vanilla_prompt.jsonl  id.test.non_relevant.vanilla_prompt.jsonl  ja.test.non_relevant.vanilla_prompt.jsonl  ko.test.non_relevant.vanilla_prompt.jsonl  ru.test.non_relevant.vanilla_prompt.jsonl  sw.test.non_relevant.vanilla_prompt.jsonl  te.test.non_relevant.vanilla_prompt.jsonl  th.test.non_relevant.vanilla_prompt.jsonl  yo.test.non_relevant.vanilla_prompt.jsonl  zh.test.non_relevant.vanilla_prompt.jsonl
results/GPT-4/non-relevant-final/: es.test.non_relevant.vanilla_prompt.jsonl  fa.test.non_relevant.vanilla_prompt.jsonl  fi.test.non_relevant.vanilla_prompt.jsonl  fr.test.non_relevant.vanilla_prompt.jsonl  id.test.non_relevant.vanilla_prompt.jsonl  ja.test.non_relevant.vanilla_prompt.jsonl  ko.test.non_relevant.vanilla_prompt.jsonl  th.test.non_relevant.vanilla_prompt.jsonl  yo.test.non_relevant.vanilla_prompt.jsonl  zh.test.non_relevant.vanilla_prompt.jsonl
results/GPT-4/relevant-final/: ar.test.relevant.vanilla_prompt.jsonl  en.test.relevant.vanilla_prompt.jsonl  fi.test.relevant.vanilla_prompt.jsonl  id.test.relevant.vanilla_prompt.jsonl  ja.test.relevant.vanilla_prompt.jsonl  ko.test.relevant.vanilla_prompt.jsonl  ru.test.relevant.vanilla_prompt.jsonl  sw.test.relevant.vanilla_prompt.jsonl  th.test.relevant.vanilla_prompt.jsonl  yo.test.relevant.vanilla_prompt.jsonl
tests/: test_prompt.py
(+51 files in other folders)
