[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nomiracl"
version = "1.0.0"
description = "Multilingual Relevance Assessment for RAG Applications"
license = { text = "Apache 2.0" }
readme = "README.md"
authors = [
    { name = "Nandan Thakur", email = "nandant@gmail.com" }
]
maintainers = [
    { name = "Nandan Thakur", email = "nandant@gmail.com" }
]
requires-python = ">=3.8"
keywords = [
    "Transformer Networks", 
    "PyTorch", 
    "NLP", 
    "deep learning", 
    "LLM", 
    "Hallucination",
    "Relevance",
    "Multilingual"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "torch",
    "transformers",
    "openai",
    "tiktoken",
    "bitsandbytes",
    "datasets",
    "accelerate",
    "vllm",
]

[project.urls]
Homepage = "https://nomiracl.github.io"
Repository = "https://github.com/project-miracl/nomiracl"

[tool.setuptools.packages.find]
include = ["nomiracl*"]
namespaces = false

[tool.ruff]
line-length = 119
fix = true